# thinkinglanguage

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  agents.txt  battle-tests.md  spec.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  playground.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benchmarks/: Cargo.toml
benchmarks/benches/: data_bench.rs  scalar_bench.rs
benchmarks/python/: data_bench.py  scalar_bench.py
crates/tl-ai/: Cargo.toml
crates/tl-ai/src/: embed.rs  lib.rs  llm.rs  model.rs  predict.rs  registry.rs  tensor.rs  train.rs
crates/tl-ast/: Cargo.toml
crates/tl-ast/src/: lib.rs
crates/tl-cli/: Cargo.toml
crates/tl-cli/src/: deploy.rs  main.rs  notebook.rs  notebook_tui.rs  package.rs
crates/tl-compiler/: Cargo.toml
crates/tl-compiler/src/: async_runtime.rs  chunk.rs  compiler.rs  jit.rs  jit_runtime.rs  lib.rs  module.rs  opcode.rs  python.rs  schema.rs  security.rs  value.rs  vm.rs
crates/tl-compiler/tests/: ai_vm_integration.rs  phase13_integration.rs  phase15_integration.rs  phase22_integration.rs  phase23_integration.rs  phase24_integration.rs  python_integration.rs  schema_evolution.rs  stream_vm_integration.rs
crates/tl-data/: Cargo.toml
crates/tl-data/src/: bigquery.rs  clickhouse_conn.rs  databricks.rs  duckdb_conn.rs  engine.rs  iceberg_conn.rs  io.rs  lib.rs  mongo_conn.rs  mssql_conn.rs  mysql_conn.rs  pg.rs  quality.rs  redis_conn.rs  redshift.rs  s3.rs  sftp_conn.rs  snowflake.rs  sqlite_conn.rs  translate.rs  validate.rs  write.rs
crates/tl-errors/: Cargo.toml
crates/tl-errors/src/: lib.rs  security.rs
crates/tl-gpu/: Cargo.toml
crates/tl-gpu/src/: batch.rs  device.rs  lib.rs  ops.rs  shaders.rs  tensor.rs
crates/tl-interpreter/: Cargo.toml
crates/tl-interpreter/src/: lib.rs
crates/tl-interpreter/tests/: ai_integration.rs  data_integration.rs  phase15_integration.rs  stream_integration.rs
crates/tl-ir/: Cargo.toml
crates/tl-ir/src/: builder.rs  display.rs  lib.rs  lower.rs  optimize.rs  plan.rs
crates/tl-ir/src/passes/: column_pruning.rs  cse.rs  filter_merge.rs  mod.rs  predicate_pushdown.rs
crates/tl-lexer/: Cargo.toml
crates/tl-lexer/src/: lib.rs
crates/tl-llvm/: Cargo.toml
crates/tl-llvm/src/: aot.rs  codegen.rs  lib.rs  runtime.rs  types.rs
crates/tl-lsp/: Cargo.toml
crates/tl-lsp/src/: ast_util.rs  completion.rs  diagnostics.rs  doc.rs  document.rs  format.rs  goto_def.rs  hover.rs  lib.rs  server.rs  symbols.rs
crates/tl-lsp/tests/: integration.rs
crates/tl-mcp/: Cargo.toml
crates/tl-mcp/src/: client.rs  convert.rs  error.rs  lib.rs  server.rs
crates/tl-mcp/tests/: integration.rs  test_server.rs
crates/tl-package/: Cargo.toml
crates/tl-package/src/: cache.rs  fetch.rs  lib.rs  lockfile.rs  manifest.rs  outdated.rs  registry_client.rs  resolver.rs  version.rs
crates/tl-package/tests/: integration.rs
crates/tl-parser/: Cargo.toml
crates/tl-parser/src/: lib.rs
crates/tl-registry/: Cargo.toml
crates/tl-registry/src/: lib.rs  main.rs  pack.rs  server.rs  storage.rs
crates/tl-stream/: Cargo.toml
crates/tl-stream/src/: agent.rs  alert.rs  connector.rs  lib.rs  lineage.rs  metrics.rs  pipeline.rs  schedule.rs  stream.rs  window.rs
crates/tl-stream/src/connector/: kafka.rs
crates/tl-types/: Cargo.toml
crates/tl-types/src/: checker.rs  convert.rs  infer.rs  lib.rs
crates/tl-wasm/: Cargo.toml
crates/tl-wasm/playground/: index.html
crates/tl-wasm/src/: lib.rs
demos/: iceberg_demo.sh
deploy/: Dockerfile  gcp_gpu_benchmark.sh
docs/advanced/: backends.md  ffi.md  schema-evolution.md  security.md
docs/ai/: agents-api-reference.md  agents-examples.md  agents-internals.md  agents.md  ml.md  tensors.md
docs/data/: connectors.md  quality.md  streaming.md  tables.md
docs/getting-started/: editor-setup.md  installation.md  quickstart.md
docs/language/: basics.md  collections.md  concurrency.md  error-handling.md  functions.md  generics-traits.md  iterators.md  modules.md  ownership.md  structs-enums.md  types.md
docs/tools/: cli.md  lsp.md  mcp.md  notebook.md  package-manager.md
editors/vscode/: language-configuration.json  package.json
examples/: 01_hello_world.tl  02_basic_types.tl  03_functions.tl  04_control_flow.tl  05_match.tl  06_lists_and_loops.tl  07_closures_and_pipe.tl  08_string_operations.tl  09_algorithms.tl  10_data_pipeline.tl  1brc.tl  1brc_compute.tl  1brc_demo.sh  1brc_generate.py  1brc_run.sh  agent_01_basic.tl  ai_01_tensors.tl  ai_02_training.tl  ai_03_model_registry.tl  benchmark_generate.py  data_01_csv.tl  data_02_parquet.tl  data_03_pipeline.tl  data_04_join.tl  data_05_postgres.tl  data_06_benchmark.tl  data_07_iceberg.tl  gpu_1brc.tl  gpu_benchmark.tl  iceberg_demo.sh  iceberg_generate.py  mcp_01_client.tl  mcp_02_resources_prompts.tl  mcp_03_server.tl  mcp_04_error_handling.tl  mcp_05_multi_server.tl  stream_01_pipeline.tl  stream_02_windowing.tl  stream_03_connectors.tl  validation_results.txt  (+1 more)
examples/test_data/: orders.csv  train_linreg.csv  users.csv
infra/: gcp_gpu_benchmark.sh
npm/: README.md  install.js  package.json
scripts/: install.sh  publish.sh
tests/: mcp_builtins.tl  mcp_resources_prompts.tl
tests/battle/: t01_let_bindings.tl  t02_arithmetic.tl  t03_string_ops.tl  t04_boolean_logic.tl  t05_control_flow.tl  t06_loops.tl  t07_functions.tl  t08_closures.tl  t09_lists.tl  t100_full_pipeline.tl  t101_agent_definition.tl  t102_agent_tools.tl  t103_agent_hooks.tl  t104_agent_errors.tl  t105_agent_http.tl  t106_agent_multi_provider.tl  t107_triple_quoted_strings.tl  t108_unicode_strings.tl  t109_float_edge_cases.tl  t10_maps.tl  t110_numeric_edge_cases.tl  t111_collection_edge_cases.tl  t112_datetime_full.tl  t113_file_io_extended.tl  t114_parquet_io.tl  t115_security_extended.tl  t116_math_extended.tl  t117_data_validation.tl  t118_sqlite_connector.tl  t119_negative_tests.tl  t11_sets.tl  (+91 more)
(+28 files in other folders)
