[workspace]
members = [
    "crates/tl-lexer",
    "crates/tl-ast",
    "crates/tl-parser",
    "crates/tl-interpreter",
    "crates/tl-errors",
    "crates/tl-cli",
    "crates/tl-data",
    "crates/tl-compiler",
    "benchmarks",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Mallesh Madapathi <mallesh@thinkingdbx.com>"]
repository = "https://github.com/mplusm/thinkinglanguage"
description = "ThinkingLanguage — A purpose-built language for Data Engineering & AI"

[workspace.dependencies]
# Lexer
logos = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }
rustyline = "15"

# Shared
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
ariadne = "0.4"
