[workspace]
members = [
    "crates/tl-lexer",
    "crates/tl-ast",
    "crates/tl-parser",
    "crates/tl-interpreter",
    "crates/tl-errors",
    "crates/tl-types",
    "crates/tl-cli",
    "crates/tl-data",
    "crates/tl-compiler",
    "crates/tl-ai",
    "crates/tl-stream",
    "crates/tl-lsp",
    "crates/tl-package",
    "crates/tl-ir",
    "crates/tl-llvm",
    "crates/tl-wasm",
    "crates/tl-gpu",
    "crates/tl-registry",
    "benchmarks",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Mallesh Madapathi <mallesh@thinkingdbx.com>"]
repository = "https://github.com/mplusm/thinkinglanguage"
homepage = "https://github.com/mplusm/thinkinglanguage"
description = "ThinkingLanguage — A purpose-built language for Data Engineering & AI"
readme = "README.md"
keywords = ["data-engineering", "language", "ai", "pipeline", "etl"]
categories = ["compilers", "development-tools", "science"]

[workspace.dependencies]
# Lexer
logos = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }
rustyline = "15"

# Shared
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
ariadne = "0.4"

[profile.release]
strip = true
lto = true
