[package]
name = "tl-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI/ML integration for ThinkingLanguage — tensors, training, inference, LLM"

[dependencies]
tl-ast = { path = "../tl-ast" }
ndarray = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
linfa = "0.7"
linfa-linear = "0.7"
linfa-logistic = "0.7"
linfa-trees = "0.7"
ort = "2.0.0-rc.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
