[package]
name = "tl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI entry point for ThinkingLanguage (tl run, tl shell)"

[[bin]]
name = "tl"
path = "src/main.rs"

[dependencies]
tl-lexer = { path = "../tl-lexer" }
tl-parser = { path = "../tl-parser" }
tl-ast = { path = "../tl-ast" }
tl-interpreter = { path = "../tl-interpreter" }
tl-compiler = { path = "../tl-compiler" }
tl-errors = { path = "../tl-errors" }
tl-types = { path = "../tl-types" }
tl-ai = { path = "../tl-ai" }
tl-stream = { path = "../tl-stream" }
tl-lsp = { path = "../tl-lsp" }
tl-package = { path = "../tl-package" }
clap.workspace = true
rustyline.workspace = true
toml = "0.8"
toml_edit = "0.22"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[features]
kafka = ["tl-stream/kafka"]
mysql = ["tl-compiler/mysql", "tl-interpreter/mysql"]
s3 = ["tl-compiler/s3", "tl-interpreter/s3"]
redis = ["tl-compiler/redis", "tl-interpreter/redis"]
python = ["tl-compiler/python", "tl-interpreter/python"]
async-runtime = ["tl-compiler/async-runtime", "tl-interpreter/async-runtime"]
