[package]
name = "thinkinglanguage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "CLI entry point for ThinkingLanguage (tl run, tl shell)"

[[bin]]
name = "tl"
path = "src/main.rs"

[dependencies]
tl-lexer = { path = "../tl-lexer", version = "0.2.0" }
tl-parser = { path = "../tl-parser", version = "0.2.0" }
tl-ast = { path = "../tl-ast", version = "0.2.0" }
tl-interpreter = { path = "../tl-interpreter", version = "0.2.0" }
tl-compiler = { path = "../tl-compiler", version = "0.2.0" }
tl-errors = { path = "../tl-errors", version = "0.2.0" }
tl-types = { package = "thinkinglanguage-types", path = "../tl-types", version = "0.2.0" }
tl-ai = { path = "../tl-ai", version = "0.2.0" }
tl-stream = { path = "../tl-stream", version = "0.2.0" }
tl-lsp = { path = "../tl-lsp", version = "0.2.0" }
tl-package = { path = "../tl-package", version = "0.2.0" }
tl-llvm = { path = "../tl-llvm", optional = true }
clap.workspace = true
rustyline.workspace = true
toml = "0.8"
toml_edit = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

# Optional — notebook TUI
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
kafka = ["tl-stream/kafka"]
mysql = ["tl-compiler/mysql", "tl-interpreter/mysql"]
s3 = ["tl-compiler/s3", "tl-interpreter/s3"]
redis = ["tl-compiler/redis", "tl-interpreter/redis"]
sqlite = ["tl-compiler/sqlite", "tl-interpreter/sqlite"]
python = ["tl-compiler/python", "tl-interpreter/python"]
async-runtime = ["tl-compiler/async-runtime", "tl-interpreter/async-runtime"]
llvm-backend = ["tl-llvm"]
gpu = ["tl-compiler/gpu"]
registry = ["tl-package/registry"]
notebook = ["dep:ratatui", "dep:crossterm"]
