[package]
name = "tl-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bytecode compiler and VM for ThinkingLanguage (Phase 2)"

[dependencies]
tl-ast = { path = "../tl-ast" }
tl-errors = { path = "../tl-errors" }
tl-data = { path = "../tl-data" }
tl-ai = { path = "../tl-ai" }
tl-stream = { path = "../tl-stream" }
tl-parser = { path = "../tl-parser" }
tl-lexer = { path = "../tl-lexer" }
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
target-lexicon = "0.13"
rayon = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
serde_json = "1"
regex = "1"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

[features]
default = []
mysql = ["tl-data/mysql"]
s3 = ["tl-data/s3"]
redis = ["tl-data/redis"]
