[package]
name = "tl-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Bytecode compiler and VM for ThinkingLanguage (Phase 2)"

[dependencies]
# Always needed (WASM-safe)
tl-ast = { path = "../tl-ast", version = "0.3.0" }
tl-errors = { path = "../tl-errors", version = "0.3.0" }
tl-ir = { path = "../tl-ir", version = "0.3.0" }
tl-parser = { path = "../tl-parser", version = "0.3.0" }
tl-lexer = { path = "../tl-lexer", version = "0.3.0" }
serde_json = "1"
regex = "1"
chrono = "0.4"
rust_decimal = "1"
sha2 = "0.10"
md-5 = "0.10"
rand = { version = "0.8", optional = true }

# Native-only (excluded in WASM builds)
tl-data = { path = "../tl-data", version = "0.3.0", optional = true }
tl-ai = { path = "../tl-ai", version = "0.3.0", optional = true }
tl-stream = { path = "../tl-stream", version = "0.3.0", optional = true }
tl-package = { path = "../tl-package", version = "0.3.0", optional = true }
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-jit = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
target-lexicon = { version = "0.13", optional = true }
rayon = { version = "1", optional = true }
reqwest = { version = "0.13", features = ["blocking", "rustls"], optional = true }

# Feature-gated optional deps
pyo3 = { version = "0.23", features = ["auto-initialize"], optional = true }
arrow-ipc = { version = "53", optional = true }
arrow-array = { version = "53", optional = true }
arrow-schema = { version = "53", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "time", "fs", "sync"], optional = true }
tl-gpu = { path = "../tl-gpu", version = "0.3.0", optional = true }
tl-mcp = { path = "../tl-mcp", version = "0.3.0", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["native"]
native = [
    "dep:tl-data", "dep:tl-ai", "dep:tl-stream", "dep:tl-package",
    "dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-jit", "dep:cranelift-module",
    "dep:target-lexicon", "dep:rayon", "dep:reqwest", "dep:rand",
]
mysql = ["tl-data/mysql"]
s3 = ["tl-data/s3"]
redis = ["tl-data/redis"]
sqlite = ["tl-data/sqlite"]
duckdb = ["tl-data/duckdb"]
mssql = ["tl-data/mssql"]
snowflake = ["tl-data/snowflake"]
bigquery = ["tl-data/bigquery"]
databricks = ["tl-data/databricks"]
clickhouse = ["tl-data/clickhouse"]
mongodb = ["tl-data/mongodb"]
sftp = ["tl-data/sftp"]
python = ["pyo3", "arrow-ipc", "arrow-array", "arrow-schema"]
async-runtime = ["tokio"]
gpu = ["dep:tl-gpu", "native"]
mcp = ["dep:tl-mcp"]
