[package]
name = "tl-data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Data engine for ThinkingLanguage — DataFusion, connectors, I/O"

[dependencies]
tl-ast = { path = "../tl-ast", version = "0.3.0" }
tl-errors = { path = "../tl-errors", version = "0.3.0" }

datafusion = "44"
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
parquet = "53"
postgres = "0.19"
postgres-native-tls = "0.5"
native-tls = "0.2"
num_cpus = "1"
regex = "1"

# Feature-gated connectors
mysql = { version = "25", optional = true }
object_store = { version = "0.11", features = ["aws"], optional = true }
url = { version = "2", optional = true }
redis = { version = "0.27", optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
duckdb = { version = "1.2", features = ["bundled", "appender-arrow"], optional = true }
arrow-ipc-054 = { package = "arrow-ipc", version = "54", optional = true }
tiberius = { version = "0.12", default-features = false, features = ["tds73", "chrono"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], optional = true }
serde_json = { version = "1", optional = true }
mongodb = { version = "3.1", optional = true }
futures = { version = "0.3", optional = true }
ssh2 = { version = "0.9", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
mysql = ["dep:mysql"]
s3 = ["dep:object_store", "dep:url"]
redis = ["dep:redis"]
sqlite = ["dep:rusqlite"]
duckdb = ["dep:duckdb", "dep:arrow-ipc-054"]
mssql = ["dep:tiberius", "dep:tokio-util"]
clickhouse = ["dep:reqwest", "dep:serde_json"]
snowflake = ["dep:reqwest", "dep:serde_json"]
bigquery = ["dep:reqwest", "dep:serde_json"]
databricks = ["dep:reqwest", "dep:serde_json"]
mongodb = ["dep:mongodb", "dep:futures", "dep:serde_json"]
sftp = ["dep:ssh2", "dep:serde_json"]
