[package]
name = "tl-errors"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Error types and diagnostics for the ThinkingLanguage compiler"

[dependencies]
ariadne.workspace = true
thiserror.workspace = true
