[package]
name = "tl-interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-walking interpreter for ThinkingLanguage (Phase 0)"

[dependencies]
tl-ast = { path = "../tl-ast" }
tl-errors = { path = "../tl-errors" }
tl-data = { path = "../tl-data" }
tl-ai = { path = "../tl-ai" }
tl-stream = { path = "../tl-stream" }
tl-parser = { path = "../tl-parser" }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
