[package]
name = "tl-interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tree-walking interpreter for ThinkingLanguage (Phase 0)"

[dependencies]
tl-ast = { path = "../tl-ast" }
tl-errors = { path = "../tl-errors" }
tl-data = { path = "../tl-data" }
tl-ai = { path = "../tl-ai" }
tl-stream = { path = "../tl-stream" }
tl-parser = { path = "../tl-parser" }
tl-package = { path = "../tl-package" }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
serde_json = "1"
regex = "1"
chrono = "0.4"
pyo3 = { version = "0.23", features = ["auto-initialize"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
mysql = ["tl-data/mysql"]
s3 = ["tl-data/s3"]
redis = ["tl-data/redis"]
python = ["pyo3"]
