[package]
name = "tl-interpreter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Tree-walking interpreter for ThinkingLanguage (Phase 0)"

[dependencies]
tl-ast = { path = "../tl-ast", version = "0.3.0" }
tl-errors = { path = "../tl-errors", version = "0.3.0" }
tl-data = { path = "../tl-data", version = "0.3.0" }
tl-ai = { path = "../tl-ai", version = "0.3.0" }
tl-stream = { path = "../tl-stream", version = "0.3.0" }
tl-parser = { path = "../tl-parser", version = "0.3.0" }
tl-package = { path = "../tl-package", version = "0.3.0" }
tl-compiler = { path = "../tl-compiler", version = "0.3.0" }
reqwest = { version = "0.13", features = ["blocking", "rustls"] }
serde_json = "1"
regex = "1"
chrono = "0.4"
rust_decimal = "1"
sha2 = "0.10"
md-5 = "0.10"
rand = "0.8"
pyo3 = { version = "0.23", features = ["auto-initialize"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "time", "fs", "sync"], optional = true }
tl-mcp = { path = "../tl-mcp", version = "0.3.0", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
mysql = ["tl-data/mysql"]
s3 = ["tl-data/s3"]
redis = ["tl-data/redis"]
sqlite = ["tl-data/sqlite"]
duckdb = ["tl-data/duckdb"]
mssql = ["tl-data/mssql"]
snowflake = ["tl-data/snowflake"]
bigquery = ["tl-data/bigquery"]
databricks = ["tl-data/databricks"]
clickhouse = ["tl-data/clickhouse"]
mongodb = ["tl-data/mongodb"]
sftp = ["tl-data/sftp"]
python = ["pyo3"]
async-runtime = ["tokio"]
mcp = ["dep:tl-mcp"]
