[package]
name = "tl-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Intermediate Representation for ThinkingLanguage table pipe optimization"

[dependencies]
tl-ast = { path = "../tl-ast", version = "0.1.0" }
