[package]
name = "tl-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for ThinkingLanguage"

[dependencies]
tl-lexer = { path = "../tl-lexer" }
tl-parser = { path = "../tl-parser" }
tl-ast = { path = "../tl-ast" }
tl-errors = { path = "../tl-errors" }
tl-types = { path = "../tl-types" }
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
