[package]
name = "tl-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Language Server Protocol implementation for ThinkingLanguage"

[dependencies]
tl-lexer = { path = "../tl-lexer", version = "0.3.0" }
tl-parser = { path = "../tl-parser", version = "0.3.0" }
tl-ast = { path = "../tl-ast", version = "0.3.0" }
tl-errors = { path = "../tl-errors", version = "0.3.0" }
tl-types = { package = "thinkinglanguage-types", path = "../tl-types", version = "0.3.0" }
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
