[package]
name = "tl-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP (Model Context Protocol) integration for ThinkingLanguage"
autobenches = false
autotests = false

[dependencies]
tl-errors = { path = "../tl-errors", version = "0.3.0" }
rmcp = { version = "1.1", features = [
    "client",
    "server",
    "macros",
    "transport-io",
    "transport-child-process",
    "transport-streamable-http-server",
    "transport-streamable-http-client-reqwest",
    "client-side-sse",
    "reqwest",
] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "process", "io-util"] }
thiserror.workspace = true

[[bin]]
name = "tl-test-mcp-server"
path = "tests/test_server.rs"

# Exclude the test server binary from auto-discovery as an integration test
[[test]]
name = "integration"
path = "tests/integration.rs"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
