[package]
name = "tl-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Recursive descent parser for ThinkingLanguage"

[dependencies]
tl-lexer = { path = "../tl-lexer", version = "0.1.0" }
tl-ast = { path = "../tl-ast", version = "0.1.0" }
tl-errors = { path = "../tl-errors", version = "0.1.0" }
