[package]
name = "tl-stream"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Streaming and pipeline engine for ThinkingLanguage (Phase 4)"

[dependencies]
tl-ast = { path = "../tl-ast", version = "0.1.0" }
tl-errors = { path = "../tl-errors", version = "0.1.0" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
rdkafka = { version = "0.37", features = ["cmake-build"], optional = true }

[features]
kafka = ["dep:rdkafka"]
