[package]
name = "tl-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ThinkingLanguage — Type system and type checker"

[dependencies]
tl-ast = { path = "../tl-ast" }
tl-errors = { path = "../tl-errors" }

[dev-dependencies]
tl-parser = { path = "../tl-parser" }
