[package]
name = "thinkinglanguage-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "ThinkingLanguage — Type system and type checker"

[lib]
name = "tl_types"

[dependencies]
tl-ast = { path = "../tl-ast", version = "0.3.0" }
tl-errors = { path = "../tl-errors", version = "0.3.0" }

[dev-dependencies]
tl-parser = { path = "../tl-parser", version = "0.3.0" }
